# Rag-legal-contract-retrieve

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: corpus_sample.yaml  eval_real.yaml  eval_sample.yaml  flagembedding_sample.yaml  public_sources.yaml  training_real.yaml  training_sample.yaml
docs/: implementation_plan.md
scripts/: bootstrap_public_sources.py  build_sample_training.py  prepare_flagembedding_data.py  prepare_public_legal_data.py  prepare_sample_corpus.py  run_sample_eval.py
src/legal_contract_rag/: __init__.py  cli.py  config.py  query_analysis.py  types.py  utils.py
src/legal_contract_rag/answering/: __init__.py  generation.py
src/legal_contract_rag/corpus/: __init__.py  bootstrap.py  chunking.py  loaders.py  public_datasets.py  sec_edgar.py
src/legal_contract_rag/evaluation/: __init__.py  answer_metrics.py  benchmark.py  experiments.py  retrieval_metrics.py
src/legal_contract_rag/pipelines/: generation.py  rag.py
src/legal_contract_rag/retrieval/: __init__.py  base.py  bge.py  hybrid.py
src/legal_contract_rag/training/: __init__.py  builders.py  flagembedding.py
tests/: test_benchmark.py  test_chunking.py  test_experiments.py  test_flagembedding.py  test_generation.py  test_metrics.py  test_query_analysis.py  test_rag_pipeline.py  test_training.py
